# OpenGLRayTracer

./: CMakeLists.txt  main.cpp
assets/: box.geo.json  lantern.geo.json  scene.json  winefox.json
console/: CMakeLists.txt  logger.cpp  logger.hpp
model/: CMakeLists.txt  camera.cpp  cube.hpp  model.cpp  model.hpp  pose.cpp  pose.hpp  scene.cpp  scene.hpp
opengl/: CMakeLists.txt  common.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex.cpp  vertex.hpp
shaders/: camera.glsl  fragment.glsl  geometry.glsl  vertex.glsl
shaders/raytrace/: fragment.glsl  vertex.glsl
view/: CMakeLists.txt  camera.cpp  camera.hpp  sdl.cpp  sdl.hpp
